# task_mAIstro

./: pyproject.toml  requirements.txt
ntbk/: audio_ux.ipynb
